--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,6 +51,7 @@ environment:
     B2_LINK: shared,static
     # B2_THREADING: threading=multi,single
     B2_VARIANT: release
+    B2_FLAGS: testing.execute=off
 
   matrix:
     - FLAVOR: Visual Studio 2022
