--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,5 +210,6 @@ message(STATUS "Boost.Locale: "
 if(BUILD_TESTING AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/CMakeLists.txt")
 
   add_subdirectory(test)
+  add_subdirectory(examples)
 
 endif()
