Fix various MSVC warnings
Mostly constant conditions and narrowing casts

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -70,12 +70,12 @@ boost_locale_add_test(test_generator)
 # icu
 boost_locale_add_test(test_collate)
 boost_locale_add_test(test_convert)
-if(WIN32)
-  boost_locale_add_test(test_boundary)
-  boost_locale_add_test(test_formatting)
-else()
+if(BOOST_LOCALE_ENABLE_ICU)
   boost_locale_add_test(test_boundary COMPILE_ONLY)
   boost_locale_add_test(test_formatting COMPILE_ONLY)
+else()
+  boost_locale_add_test(test_boundary)
+  boost_locale_add_test(test_formatting)
 endif()
 boost_locale_add_test(test_icu_vs_os_timezone)
 # winapi
