--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,6 +37,9 @@ function(boost_locale_add_test name)
   target_link_libraries(${name} PRIVATE Boost::locale)
   target_compile_definitions(${name} PRIVATE ${boost_locale_defines})
   target_compile_options(${name} PRIVATE ${BOOST_LOCALE_WARNING_OPTIONS})
+  if(BOOST_LOCALE_ENABLE_ICU)
+    target_include_directories(${name} PRIVATE ${ICU_INCLUDE_DIR})
+  endif()
 
   if(ARG_WORKING_DIRECTORY)
     set_target_properties(${name} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${ARG_WORKING_DIRECTORY}")
