--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ env:
   B2_CI_VERSION: 1
   B2_VARIANT: debug,release
   B2_LINK: shared,static
+  B2_DEFINES: BOOST_LOCALE_DISABLE_DEPRECATED_03_WARNING
   LCOV_BRANCH_COVERAGE: 0
   CODECOV_NAME: Github Actions
 
