CMake: Enable Werror in tests for MSVC/GCC>=11

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,12 @@ include(BoostTestJamfile)
 set(BOOST_TEST_COMPILE_DEFINITIONS "")
 set(BOOST_TEST_LINK_LIBRARIES "Boost::locale")
 set(BOOST_TEST_COMPILE_OPTIONS ${BOOST_LOCALE_WARNING_OPTIONS})
+if(MSVC OR
+  (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT CMAKE_CXX_COMPILER_VERSION VERSION_LESS 11)
+)
+  list(APPEND BOOST_TEST_COMPILE_OPTIONS -Wall -Werror)
+endif()
+
 if(BOOST_LOCALE_ENABLE_ICONV)
   list(APPEND BOOST_TEST_COMPILE_DEFINITIONS BOOST_LOCALE_WITH_ICONV=1)
 endif()
