--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,7 +24,7 @@ if(BOOST_LOCALE_ENABLE_ICONV)
 endif()
 if(BOOST_LOCALE_ENABLE_ICU)
   list(APPEND BOOST_TEST_COMPILE_DEFINITIONS BOOST_LOCALE_WITH_ICU=1)
-  list(APPEND BOOST_TEST_LINK_LIBRARIES ICU::uc)
+  list(APPEND BOOST_TEST_LINK_LIBRARIES ICU::i18n ICU::uc)
 endif()
 if(NOT BOOST_LOCALE_ENABLE_STD)
   list(APPEND BOOST_TEST_COMPILE_DEFINITIONS BOOST_LOCALE_NO_STD_BACKEND=1)
