--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(boost_locale
 add_library(Boost::locale ALIAS boost_locale)
 
 target_include_directories(boost_locale PUBLIC include PRIVATE src)
+target_compile_features(boost_locale PUBLIC cxx_std_11)
 
 target_link_libraries(boost_locale
   PUBLIC
