--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -253,11 +253,15 @@ jobs:
         env: {B2_FLAGS: -a boost.locale.icu=off boost.locale.iconv=on}
       - name: Run tests with ICU
         if: '!matrix.coverity'
-        run: ci/build.sh
+        run: |
+          B2_TARGETS="libs/$SELF/test//show_config --verbose-test" ci/build.sh
+          ci/build.sh
         env: {B2_FLAGS: -a boost.locale.icu=on  boost.locale.iconv=off testing.execute=off}
       - name: Run tests with ICU/iconv
         if: '!matrix.coverity'
-        run: ci/build.sh
+        run: |
+          B2_TARGETS="libs/$SELF/test//show_config --verbose-test" ci/build.sh
+          ci/build.sh
         env: {B2_FLAGS: -a boost.locale.icu=on  boost.locale.iconv=on testing.execute=off}
 
       - name: Upload coverage
