--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,46 @@ env:
   CODECOV_NAME: Github Actions
 
 jobs:
+  CheckFormatting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: DoozyX/clang-format-lint-action@v0.14
+        with:
+          exclude: './doc'
+          clangFormatVersion: 14
+      - name: Check line endings
+        run: |
+          if grep -r -l $'\r' --exclude-dir="\.git" --exclude-dir="doc" --exclude="*.mo"; then
+              echo "Found files windows style line endings (CRLF). Please fix!"
+              exit 1
+          fi
+      - name: Check for tabs
+        run: |
+          if grep -r -l $'\t' --exclude-dir="\.git" --exclude-dir="doc" --exclude="*.mo"; then
+              echo "Found files with TABs. Please fix!"
+              exit 1
+          fi
+
+  Create_Boost_Documentation:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Fetch Boost.CI
+        uses: actions/checkout@v3
+        with:
+          repository: boostorg/boost-ci
+          ref: master
+          path: boost-ci-cloned
+      - name: Get CI scripts folder
+        run: cp -r boost-ci-cloned/ci . && rm -rf boost-ci-cloned
+      - name: Setup Boost
+        run: source ci/github/install.sh
+      - name: Create documentation
+        run: |
+            sudo apt-get install -y doxygen
+            B2_TARGETS=libs/$SELF/doc ci/build.sh
+
   posix:
     defaults:
       run:
@@ -482,22 +522,3 @@ jobs:
                 fi
             fi
             ctest --output-on-failure --build-config ${{matrix.build_type}}
-
-  Create_Boost_Documentation:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Fetch Boost.CI
-        uses: actions/checkout@v3
-        with:
-          repository: boostorg/boost-ci
-          ref: master
-          path: boost-ci-cloned
-      - name: Get CI scripts folder
-        run: cp -r boost-ci-cloned/ci . && rm -rf boost-ci-cloned
-      - name: Setup Boost
-        run: source ci/github/install.sh
-      - name: Create documentation
-        run: |
-            sudo apt-get install -y doxygen
-            B2_TARGETS=libs/$SELF/doc ci/build.sh
