--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,7 +35,7 @@ environment:
     B2_ADDRESS_MODEL: 32,64
     B2_LINK: shared,static
     # B2_THREADING: threading=multi,single
-    B2_VARIANT: release
+    B2_VARIANT: debug,release
 
   matrix:
     - FLAVOR: Visual Studio 2008, 2010, 2012
