Move `BOOST_LOCALE_SOURCE` define to buildsystem
Ensures that this is defined consistently for all files.
Fixes #145

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,9 +50,12 @@ target_link_libraries(boost_locale
 )
 
 target_compile_definitions(boost_locale
-  PUBLIC BOOST_LOCALE_NO_LIB
-  PRIVATE _CRT_SECURE_NO_WARNINGS
-  PRIVATE _SCL_SECURE_NO_WARNINGS
+  PUBLIC
+    BOOST_LOCALE_NO_LIB
+  PRIVATE
+    BOOST_LOCALE_SOURCE
+    _CRT_SECURE_NO_WARNINGS
+    _SCL_SECURE_NO_WARNINGS
 )
 
 if(BUILD_SHARED_LIBS)
