--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -249,8 +249,9 @@ jobs:
           gen_locale en_US.UTF-8 # Assumed to be there by tests
           # Used by various tests
           gen_locale he_IL.UTF-8
-          gen_locale ru_RU.UTF-8
           gen_locale ja_JP.UTF-8
+          gen_locale ru_RU.UTF-8
+          gen_locale tr_TR.UTF-8
           # ISO locales used by some tests
           gen_locale en_US.iso88591
           gen_locale he_IL.iso88598
