--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(boost_locale
   src/boost/locale/util/default_locale.cpp
   src/boost/locale/util/encoding.cpp
   src/boost/locale/util/encoding.hpp
+  src/boost/locale/util/foreach_char.hpp
   src/boost/locale/util/info.cpp
   src/boost/locale/util/locale_data.cpp
   src/boost/locale/util/numeric.hpp
