Reconcile `utf8_support` handling in std backend
Document the meaning of the `utf8_support` enum and refactor/change
usages to be consistent and logical. Add comments where required.

Rename `native_with_wide` to `native` after that got free for use as
there is no `native_without_wide`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,6 +251,7 @@ jobs:
           gen_locale he_IL.UTF-8
           gen_locale ja_JP.UTF-8
           gen_locale ru_RU.UTF-8
+          gen_locale sv_SE.UTF-8
           gen_locale tr_TR.UTF-8
           # ISO locales used by some tests
           gen_locale en_US.iso88591
