Add coverage collection for VS 2017 on appveyor
The `std::collate` bug is only triggered on the VS 2017 image on
appveyor hence it is the only one where `collation_works` returns false
and the `utf8_collator_from_wide` is used.
So to collect coverage for that this is the configuration to do it.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,6 +61,8 @@ environment:
       B2_CXXFLAGS: -permissive-
       B2_CXXSTD: 2a
       B2_TOOLSET: msvc-14.1
+      # The VS2017 image has some issues which we workaround, so collect coverage for that.
+      COVERAGE: true
 
     - FLAVOR: Visual Studio 2019
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
